--- a/isbi-19/00-intro.ipynb
+++ b/isbi-19/00-intro.ipynb
@@ -30,7 +30,10 @@
     "### Test your installation\n",
     "\n",
     "The next cell loads the packages needed for this initial test.\n",
-    "It might take a little bit of time to run the first time you try it because Julia is essentially a compiled language under the hood, even though it feels like an interactive language to the user, so it will be compiling things behind the scenes."
+    "It might take a little bit of time to run the first time you try it\n",
+    "because Julia is essentially a compiled language under the hood,\n",
+    "even though it feels like an interactive language to the user,\n",
+    "so it will be compiling things behind the scenes."
    ]
   },
   {
@@ -39,9 +42,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load all packages needed for this demo \n",
-    "using MIRT # https://github.com/JeffFessler/MIRT.jl\n",
-    "using FFTW"
+    "# Load all packages needed for this demo\n",
+    "using MIRT: ellipse_im, jim # https://github.com/JeffFessler/MIRT.jl\n",
+    "using FFTW: fft"
    ]
   },
   {
@@ -71,7 +74,7 @@
    "outputs": [],
    "source": [
     "# calculate k-space data using fft\n",
-    "kspace = fft(image) # this is a 2D FFT because image is a 2D array\n",
+    "kspace = fft(image) # this is a 2D FFT because \"image\" is a 2D array\n",
     "jim(kspace, fft0=true) # show k-space with 0 at center, ala matlab's \"fftshift\""
    ]
   },
@@ -81,8 +84,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# it's hard to see much on a linear scale, so let's use a log scale\n",
-    "logger = (x;min=-6) -> log10.(max.(abs.(x) / maximum(abs.(x)), (10.)^min))\n",
+    "# It is hard to see much on a linear scale, so now use a log scale\n",
+    "logger = (x ; min=-6) -> log10.(max.(abs.(x) / maximum(abs.(x)), (10.)^min))\n",
     "jim(logger(kspace), \"k-space data on log scale\", fft0=true)"
    ]
   },
@@ -104,12 +107,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "?jim"
+    "?jim # uncomment this line to see"
    ]
   },
   {
@@ -124,9 +125,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.1.0",
+   "display_name": "Julia 1.4.2",
    "language": "julia",
-   "name": "julia-1.1"
+   "name": "julia-1.4"
   }
  },
  "nbformat": 4,
