--- a/isbi-19/01-recon.ipynb
+++ b/isbi-19/01-recon.ipynb
@@ -23,11 +23,11 @@
     "# load all packages needed for this demo \n",
     "using MIRT # https://github.com/JeffFessler/MIRT.jl\n",
     "using LinearAlgebra\n",
-    "using Plots; default(markerstrokecolor=nothing)\n",
-    "using LinearMaps\n",
+    "using Plots; default(markerstrokecolor=:auto)\n",
+    "using LinearMapsAA\n",
     "using FFTW\n",
     "using Random: seed!\n",
-    "#include(ENV[\"HOME\"] * \"/l/g/teach/w19-598-opt/hw/auto/test/lipcheck.jl\")"
+    "#include(ENV[\"hw598test\"] * \"lipcheck.jl\")"
    ]
   },
   {
@@ -48,7 +48,8 @@
     "Xtrue = ellipse_im(ny, oversample=2)[Int((ny-nx)/2+1):Int(ny-(ny-nx)/2),:]\n",
     "#Xtrue = ellipse_im(192, ny=256, oversample=2) # too small\n",
     "nx,ny = size(Xtrue)\n",
-    "jim(Xtrue, \"true image\")"
+    "jim(Xtrue, \"true image\")\n",
+    "#prompt()"
    ]
   },
   {
@@ -100,7 +101,7 @@
    "source": [
     "### Prepare to reconstruct\n",
     "Creating a system matrix (encoding matrix) and an initial image  \n",
-    "The system matrix is a `LinearMap` object, akin to a `fatrix` in Matlab MIRT."
+    "The system matrix is a `LinearMapAA` object, akin to a `fatrix` in Matlab MIRT."
    ]
   },
   {
@@ -110,10 +111,12 @@
    "outputs": [],
    "source": [
     "# system model\n",
-    "F = LinearMap{Complex{Float32}}(\n",
+    "F = LinearMapAA(\n",
     "    x -> fft(reshape(x,M,N))[samp],\n",
-    "    y -> (M*N)*ifft(embed(y,samp))[:],\n",
-    "    sum(samp), M*N);"
+    "    y -> (M*N)*vec(ifft(embed(y,samp))),\n",
+    "    (sum(samp), M*N),\n",
+    "    T = Complex{Float32},\n",
+    ");"
    ]
   },
   {
@@ -126,7 +129,8 @@
     "nrmse = (x) -> norm(x[:] - Xtrue[:]) / norm(Xtrue[:])\n",
     "X0 = reshape(1/(M*N) * (F' * y), M, N)\n",
     "@show nrmse(X0)\n",
-    "jim(X0, \"|X0|: initial image\")"
+    "jim(X0, \"|X0|: initial image\")\n",
+    "#prompt()"
    ]
   },
   {
@@ -141,7 +145,7 @@
     "$\n",
     "where $\\psi$ is the Fair potential function\n",
     "and $T$ is first-order finite differences in 2D,\n",
-    "again implemented as a `LinearMap` object."
+    "again implemented as a `LinearMapAA` object."
    ]
   },
   {
@@ -154,7 +158,7 @@
     "A = F\n",
     "delta = 0.1\n",
     "reg = 0.01 * M * N\n",
-    "T = diff_map(M,N) # finite differences sparsifying transform for anisotropic TV\n",
+    "T = diff_map((M,N)) # finite differences sparsifying transform for anisotropic TV\n",
     "pot = (z,del) -> del^2 * (abs(z)/del - log(1 + abs(z)/del)) # Fair potential function\n",
     "cost = (x) -> 1/2 * norm(A * x - y)^2 + reg * sum(pot.(T*x, delta))\n",
     "dpot = (z,del) -> z / (1 + abs(z)/del) # potential derivative"
@@ -181,7 +185,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "jim(Xcg, \"CG: edge-preserving regularization\")"
+    "jim(Xcg, \"CG: edge-preserving regularization\")\n",
+    "#prompt()"
    ]
   },
   {
@@ -212,7 +217,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "jim(Xogm, \"OGM recon with edge-preserving regularization\")"
+    "jim(Xogm, \"OGM recon with edge-preserving regularization\")\n",
+    "#prompt()"
    ]
   },
   {
@@ -228,7 +234,8 @@
     "p6 = jim(Xcg - Xtrue, \"Xcg error\")\n",
     "plot(p1, p2, p3, p1, p5, p6)\n",
     "#plot(p1, p2, p3, layout=(1,3))\n",
-    "#plot(p5, p6)"
+    "#plot(p5, p6)\n",
+    "#prompt()"
    ]
   },
   {
@@ -239,13 +246,13 @@
    "source": [
     "# POGM - suboptimal in smooth case\n",
     "if false\n",
-    "fun_pogm = (iter,xk,yk,rs) -> (cost(xk), nrmse(xk), rs)\n",
-    "f_grad = (x) -> A'*(A*x - y) + reg * (T' * dpot.(T * x, delta))\n",
-    "L_f = N*M + 8*reg\n",
-    "x_pogm, out_pogm = pogm_restart(X0[:], cost, f_grad, L_f;\n",
-    "    mom=:pogm, niter=niter, fun=fun_pogm)\n",
-    "Xpogm = reshape(x_pogm, M, N)\n",
-    "@show nrmse(Xpogm)\n",
+    "    fun_pogm = (iter,xk,yk,rs) -> (cost(xk), nrmse(xk), rs)\n",
+    "    f_grad = (x) -> A'*(A*x - y) + reg * (T' * dpot.(T * x, delta))\n",
+    "    L_f = N*M + 8*reg\n",
+    "    x_pogm, out_pogm = pogm_restart(X0[:], cost, f_grad, L_f;\n",
+    "        mom=:pogm, niter=niter, fun=fun_pogm)\n",
+    "    Xpogm = reshape(x_pogm, M, N)\n",
+    "    @show nrmse(Xpogm)\n",
     "end"
    ]
   },
@@ -270,7 +277,8 @@
     "cost_min = min(minimum(cost_cg), minimum(cost_ogm))\n",
     "plot(xlabel=\"iteration k\", ylabel=\"Relative Cost\")\n",
     "scatter!(0:niter, cost_ogm .- cost_min, markershape=:utriangle, label=\"Cost OGM\")\n",
-    "scatter!(0:niter, cost_cg  .- cost_min, label=\"Cost CG\")"
+    "scatter!(0:niter, cost_cg  .- cost_min, label=\"Cost CG\")\n",
+    "#prompt()"
    ]
   },
   {
@@ -295,7 +303,8 @@
     "plot(xlabel=\"iteration k\", ylabel=\"NRMSE\")\n",
     "scatter!(0:niter, nrmse_ogm, markershape=:utriangle, label=\"NRMSE OGM\")\n",
     "scatter!(0:niter, nrmse_cg, label=\"NRMSE CG\")\n",
-    "#scatter!(0:niter, nrmse_pogm, label=\"NRMSE POGM\")"
+    "#scatter!(0:niter, nrmse_pogm, label=\"NRMSE POGM\")\n",
+    "#prompt()"
    ]
   },
   {
@@ -337,7 +346,7 @@
     "$\n",
     "where\n",
     "and $W$ is an orthogonal discrete (Haar) wavelet transform,\n",
-    "again implemented as a `LinearMap` object.\n",
+    "again implemented as a `LinearMapAA` object.\n",
     "Because $W$ is unitary,\n",
     "we make the change of variables\n",
     "$z = W x$\n",
@@ -352,8 +361,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "W, scales, mfun = Aodwt((M,N)) # Orthogonal discrete wavelet transform (LinearMap)\n",
-    "jim(mfun(W,Xtrue) .* (scales .> 0), \"wavelet detail coefficients\")"
+    "W, scales, mfun = Aodwt((M,N)) # Orthogonal discrete wavelet transform (LinearMapAA)\n",
+    "jim(mfun(W,Xtrue) .* (scales .> 0), \"wavelet detail coefficients\")\n",
+    "#prompt()"
    ]
   },
   {
@@ -419,7 +429,8 @@
     "@show nrmse(Xpogm)\n",
     "\n",
     "jim(Xfista, \"FISTA/FPGM\")\n",
-    "jim(Xpogm, \"POGM with ODWT\")"
+    "jim(Xpogm, \"POGM with ODWT\")\n",
+    "#prompt()"
    ]
   },
   {
@@ -445,7 +456,8 @@
     "plot(xlabel=\"iteration k\", ylabel=\"Relative cost\")\n",
     "scatter!(0:niter, cost_ista  .- cost_min, label=\"Cost ISTA\")\n",
     "scatter!(0:niter, cost_fista .- cost_min, markershape=:square, label=\"Cost FISTA\")\n",
-    "scatter!(0:niter, cost_pogm  .- cost_min, markershape=:utriangle, label=\"Cost POGM\")"
+    "scatter!(0:niter, cost_pogm  .- cost_min, markershape=:utriangle, label=\"Cost POGM\")\n",
+    "#prompt()"
    ]
   },
   {
@@ -470,7 +482,8 @@
     "plot(xlabel=\"iteration k\", ylabel=\"NRMSE\", ylim=[0.01,0.08])\n",
     "scatter!(0:niter, nrmse_ista, label=\"NRMSE ISTA\")\n",
     "scatter!(0:niter, nrmse_fista, markershape=:square, label=\"NRMSE FISTA\")\n",
-    "scatter!(0:niter, nrmse_pogm, markershape=:utriangle, label=\"NRMSE POGM\")"
+    "scatter!(0:niter, nrmse_pogm, markershape=:utriangle, label=\"NRMSE POGM\")\n",
+    "#prompt()"
    ]
   },
   {
@@ -495,15 +508,16 @@
     "p6 = jim(Xpogm - Xtrue, \"Xpogm error\")\n",
     "plot(p1, p2, p3, p1, p5, p6)\n",
     "#plot(p1, p2, p3, layout=(1,3))\n",
-    "#plot(p5, p6)"
+    "#plot(p5, p6)\n",
+    "#prompt()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.1.0",
+   "display_name": "Julia 1.4.2",
    "language": "julia",
-   "name": "julia-1.1"
+   "name": "julia-1.4"
   }
  },
  "nbformat": 4,
