Update to MIRT 0.13, LinearMapAA AO operators

--- a/isbi-19/01-recon.ipynb
+++ b/isbi-19/01-recon.ipynb
@@ -11,6 +11,11 @@
     "\n",
     "Although this is a 2D demo, the k-space sampling pattern used here would be appropriate only for a 3D scan with phase encoding in the two dimensions shown here.  So this demo is akin to a single slice of a 3D scan with 2D undersampling.\n",
     "\n",
+    "This demo also reproduces Figs. 1 & 3 in the survey paper\n",
+    "\"Optimization methods for MR image reconstruction\"\n",
+    "in Jan 2020 IEEE Signal Processing Magazine\n",
+    "[http://doi.org/10.1109/MSP.2019.2943645]\n",
+    "\n",
     "2019-03-06 Jeff Fessler, University of Michigan"
    ]
   },
@@ -21,13 +26,14 @@
    "outputs": [],
    "source": [
     "# load all packages needed for this demo \n",
-    "using MIRT # https://github.com/JeffFessler/MIRT.jl\n",
+    "# https://github.com/JeffFessler/MIRT.jl:\n",
+    "using MIRT: ellipse_im, jim, prompt, embed, Afft, diffl_map, Aodwt\n",
+    "using MIRT: ncg, ogm_ls, pogm_restart\n",
     "using LinearAlgebra\n",
     "using Plots; default(markerstrokecolor=:auto)\n",
-    "using LinearMapsAA\n",
+    "#using LinearMapsAA\n",
     "using FFTW\n",
-    "using Random: seed!\n",
-    "#include(ENV[\"hw598test\"] * \"lipcheck.jl\")"
+    "using Random: seed!"
    ]
   },
   {
@@ -55,7 +61,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": [
     "#savefig(\"xtrue.pdf\")"
@@ -64,7 +72,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": [
     "# generate noisy, under-sampled k-space data\n",
@@ -75,7 +85,7 @@
     "@show sum(samp) / (M*N) # under-sampling factor\n",
     "\n",
     "ytrue = fft(Xtrue)[samp]\n",
-    "y = ytrue + sig * randn(size(ytrue)) + 1im * sig * randn(size(ytrue)) # complex noise!\n",
+    "y = ytrue + sig * √(2) * randn(ComplexF32, size(ytrue)) # complex noise!\n",
     "ysnr = 20 * log10(norm(ytrue) / norm(y-ytrue))\n",
     "@show ysnr;"
    ]
@@ -83,7 +93,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": [
     "# display k-space sampling and zero-filled data\n",
@@ -110,24 +122,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# system model\n",
-    "F = LinearMapAA(\n",
-    "    x -> fft(reshape(x,M,N))[samp],\n",
-    "    y -> (M*N)*vec(ifft(embed(y,samp))),\n",
-    "    (sum(samp), M*N),\n",
-    "    T = Complex{Float32},\n",
-    ");"
+    "# system model from MIRT\n",
+    "F = Afft(samp) # operator!"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": [
     "# initial image based on zero-filled reconstruction\n",
-    "nrmse = (x) -> norm(x[:] - Xtrue[:]) / norm(Xtrue[:])\n",
-    "X0 = reshape(1/(M*N) * (F' * y), M, N)\n",
+    "nrmse = (x) -> norm(x - Xtrue) / norm(Xtrue)\n",
+    "X0 = 1/(M*N) * (F' * y)\n",
     "@show nrmse(X0)\n",
     "jim(X0, \"|X0|: initial image\")\n",
     "#prompt()"
@@ -158,7 +167,8 @@
     "A = F\n",
     "delta = 0.1\n",
     "reg = 0.01 * M * N\n",
-    "T = diff_map((M,N)) # finite differences sparsifying transform for anisotropic TV\n",
+    "# finite differences sparsifying transform for anisotropic TV:\n",
+    "T = diffl_map((M,N), 1:2 ; T=ComplexF32) # LinearMapAO\n",
     "pot = (z,del) -> del^2 * (abs(z)/del - log(1 + abs(z)/del)) # Fair potential function\n",
     "cost = (x) -> 1/2 * norm(A * x - y)^2 + reg * sum(pot.(T*x, delta))\n",
     "dpot = (z,del) -> z / (1 + abs(z)/del) # potential derivative"
@@ -173,9 +183,11 @@
     "# Nonlinear CG recon using edge-preserving regularization\n",
     "fun = (x,iter) -> (cost(x), nrmse(x), time())\n",
     "niter = 50\n",
-    "xcg, out_cg = ncg([A, T], [u -> u - y, v -> reg * dpot.(v,delta)], [t -> 1, t -> reg],\n",
-    "    X0[:], niter=niter, fun=fun)\n",
-    "Xcg = reshape(xcg, M, N)\n",
+    "if !@isdefined(Xcg)\n",
+    "    Xcg, out_cg = ncg([A, T],\n",
+    "        [u -> u - y, v -> reg * dpot.(v,delta)], [t -> 1, t -> reg],\n",
+    "        X0, niter=niter, fun=fun)\n",
+    "end\n",
     "@show nrmse(Xcg)"
    ]
   },
@@ -192,10 +204,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": [
     "#savefig(\"xcg.pdf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
+   "outputs": [],
+   "source": [
+    "# Nesterov FGM recon using edge-preserving regularization\n",
+    "if !@isdefined(Xfgm)\n",
+    "    fun_fgm = (iter,xk,yk,rs) -> (cost(yk), nrmse(yk), rs)\n",
+    "    f_grad = (x) -> A'*(A*x - y) + reg * (T' * dpot.(T * x, delta))\n",
+    "    L_f = N*M + 8*reg\n",
+    "    Xfgm, out_fgm = pogm_restart(X0, cost, f_grad, L_f;\n",
+    "        mom=:fpgm, niter=niter, fun=fun_fgm)\n",
+    "    @show nrmse(Xfgm)\n",
+    "end\n",
+    "jim(Xfgm, \"FGM recon with edge-preserving regularization\")\n",
+    "#prompt()"
    ]
   },
   {
@@ -205,9 +240,11 @@
    "outputs": [],
    "source": [
     "# OGM line-search recon using edge-preserving regularization\n",
-    "xogm, out_ogm = ogm_ls([A, T], [u -> u - y, v -> reg * dpot.(v,delta)], [t -> 1, t -> reg],\n",
-    "    X0[:], niter=niter, ninner=20, fun=fun)\n",
-    "Xogm = reshape(xogm, M, N)\n",
+    "if !@isdefined(Xogm)\n",
+    "    Xogm, out_ogm = ogm_ls([A, T],\n",
+    "        [u -> u - y, v -> reg * dpot.(v,delta)], [t -> 1, t -> reg],\n",
+    "        X0, niter=niter, ninner=20, fun=fun)\n",
+    "end\n",
     "@show nrmse(Xogm)"
    ]
   },
@@ -241,7 +278,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": [
     "# POGM - suboptimal in smooth case\n",
@@ -249,9 +288,8 @@
     "    fun_pogm = (iter,xk,yk,rs) -> (cost(xk), nrmse(xk), rs)\n",
     "    f_grad = (x) -> A'*(A*x - y) + reg * (T' * dpot.(T * x, delta))\n",
     "    L_f = N*M + 8*reg\n",
-    "    x_pogm, out_pogm = pogm_restart(X0[:], cost, f_grad, L_f;\n",
+    "    Xpogm, out_pogm = pogm_restart(X0, cost, f_grad, L_f;\n",
     "        mom=:pogm, niter=niter, fun=fun_pogm)\n",
-    "    Xpogm = reshape(x_pogm, M, N)\n",
     "    @show nrmse(Xpogm)\n",
     "end"
    ]
@@ -262,20 +300,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#lipcheck(f_grad, L_f, X0[:], show=true)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# plot cost vs iteration\n",
     "cost_cg = [out_cg[k][1] for k=1:niter+1]\n",
+    "cost_fgm = [out_fgm[k][1] for k=1:niter+1]\n",
     "cost_ogm = [out_ogm[k][1] for k=1:niter+1]\n",
     "cost_min = min(minimum(cost_cg), minimum(cost_ogm))\n",
-    "plot(xlabel=\"iteration k\", ylabel=\"Relative Cost\")\n",
+    "plot(xlabel=\"iteration k\", ylabel=\"Relative Cost\", ytick=[0,8e4])\n",
+    "scatter!(0:niter, cost_fgm .- cost_min, markershape=:square, label=\"Cost FGM\")\n",
     "scatter!(0:niter, cost_ogm .- cost_min, markershape=:utriangle, label=\"Cost OGM\")\n",
     "scatter!(0:niter, cost_cg  .- cost_min, label=\"Cost CG\")\n",
     "#prompt()"
@@ -287,7 +318,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#savefig(\"cost_ogm_cg.pdf\")"
+    "#savefig(\"cost_ogm_cg.pdf\")\n",
+    "#savefig(\"cost_fgm_ogm_cg.pdf\")"
    ]
   },
   {
@@ -298,9 +330,11 @@
    "source": [
     "# plot nrmse vs iteration\n",
     "nrmse_cg = [out_cg[k][2] for k=1:niter+1]\n",
+    "nrmse_fgm = [out_fgm[k][2] for k=1:niter+1]\n",
     "nrmse_ogm = [out_ogm[k][2] for k=1:niter+1]\n",
     "#nrmse_pogm = [out_pogm[k][2] for k=1:niter+1]\n",
     "plot(xlabel=\"iteration k\", ylabel=\"NRMSE\")\n",
+    "scatter!(0:niter, nrmse_fgm, markershape=:square, label=\"NRMSE FGM\")\n",
     "scatter!(0:niter, nrmse_ogm, markershape=:utriangle, label=\"NRMSE OGM\")\n",
     "scatter!(0:niter, nrmse_cg, label=\"NRMSE CG\")\n",
     "#scatter!(0:niter, nrmse_pogm, label=\"NRMSE POGM\")\n",
@@ -308,30 +342,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#savefig(\"nrmse_ogm_cg.pdf\")"
+    "savefig(\"nrmse_ogm_cg.pdf\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#nrmse(x_pogm), nrmse(X0)"
+    "nrmse(x_pogm), nrmse(X0)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "source": [
-    "#?pogm_restart"
+    "?pogm_restart"
    ]
   },
   {
@@ -361,15 +391,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "W, scales, mfun = Aodwt((M,N)) # Orthogonal discrete wavelet transform (LinearMapAA)\n",
-    "jim(mfun(W,Xtrue) .* (scales .> 0), \"wavelet detail coefficients\")\n",
+    "# Orthogonal discrete wavelet transform (LinearMapAO)\n",
+    "W, scales, _ = Aodwt((M,N) ; T = eltype(T))\n",
+    "jim(real(W * Xtrue) .* (scales .> 0), \"wavelet detail coefficients\")\n",
     "#prompt()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": [
     "# Cost function for edge-preserving regularization\n",
@@ -382,7 +415,7 @@
     "costz = (z) -> 1/2 * norm(Az * z - y)^2 + reg * norm(z,1) # 1-norm regularizer\n",
     "soft = (z,c) -> sign(z) * max(abs(z) - c, 0) # soft thresholding\n",
     "g_prox = (z,c) -> soft.(z, regz * c) # proximal operator\n",
-    "z0 = W * X0[:];"
+    "z0 = W * X0;"
    ]
   },
   {
@@ -415,17 +448,17 @@
     "\n",
     "z_ista, out_ista = pogm_restart(z0, Fnullz, f_gradz, f_Lz; mom=:pgm, niter=niter,\n",
     "    restart=:none, restart_cutoff=0., g_prox=g_prox, fun=fun_ista)\n",
-    "Xista = reshape(W'*z_ista, M, N)\n",
+    "Xista = W'*z_ista\n",
     "@show nrmse(Xista)\n",
     "\n",
     "z_fista, out_fista = pogm_restart(z0, Fnullz, f_gradz, f_Lz; mom=:fpgm, niter=niter,\n",
     "    restart=:gr, restart_cutoff=0., g_prox=g_prox, fun=fun_fista)\n",
-    "Xfista = reshape(W'*z_fista, M, N)\n",
+    "Xfista = W'*z_fista\n",
     "@show nrmse(Xfista)\n",
     "\n",
     "z_pogm, out_pogm = pogm_restart(z0, Fnullz, f_gradz, f_Lz; mom=:pogm, niter=niter,\n",
     "    restart=:gr, restart_cutoff=0., g_prox=g_prox, fun=fun_fista)\n",
-    "Xpogm = reshape(W'*z_pogm, M, N)\n",
+    "Xpogm = W'*z_pogm\n",
     "@show nrmse(Xpogm)\n",
     "\n",
     "jim(Xfista, \"FISTA/FPGM\")\n",
@@ -436,7 +469,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": [
     "#savefig(\"xpogm_odwt.pdf\")"
@@ -463,7 +498,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": [
     "#savefig(\"cost_pogm_odwt.pdf\")"
