--- a/mri/mri-sim-2d+t.ipynb
+++ b/mri/mri-sim-2d+t.ipynb
@@ -22,10 +22,10 @@
    "source": [
     "using MIRT: jim, prompt\n",
     "using MIRT: image_geom, ellipse_im_params, ellipse_im\n",
-    "using MIRT: nufft_init, diff_map, ncg\n",
+    "using MIRT: nufft_init, diffl_map, ncg\n",
     "using MIRT: ir_mri_sensemap_sim, ir_mri_kspace_ga_radial\n",
     "using Plots: gui, plot, scatter, default; default(markerstrokecolor=:auto)\n",
-    "using LinearAlgebra: norm, Diagonal\n",
+    "using LinearAlgebra: norm, dot, Diagonal\n",
     "using LinearMapsAA\n",
     "using Random: seed!\n",
     "jim(:abswarn, false); # suppress warnings about display of |complex| images"
@@ -96,16 +96,18 @@
     "\tkspace[:,:,2] ./= ig.fovs[2]\n",
     "\tkspace = reshape(kspace, Nro, nspf, nt, 2)\n",
     "\n",
-    "\tif true # plot sampling\n",
+    "\tif true # plot sampling (in units of cycles/pixel)\n",
     "\t\tps = Array{Any}(undef, nt)\n",
     "\t\tfor it=1:nt\n",
-    "\t\t\tps[it] = scatter(kspace[:,:,it,1], kspace[:,:,it,2], aspect_ratio=1, label=\"\")\n",
+    "\t\t\tps[it] = scatter(kspace[:,:,it,1] * ig.fovs[1], kspace[:,:,it,2] * ig.fovs[2],\n",
+    "\t\t\t\txtick=(-1:1)*0.5, ytick=(-1:1)*0.5, xlim=[-1,1]*0.52, ylim=[-1,1]*0.52,\n",
+    "\t\t\t\taspect_ratio=1, label=\"\", markersize=1)\n",
     "\t\t\tplot(ps[it])\n",
     "\t\t\tgui()\n",
     "\t\tend\n",
     "\t\tplot(ps..., layout=(2,4))\n",
+    "\t#\tprompt()\n",
     "\tend\n",
-    "#\tprompt()\n",
     "end"
    ]
   },
@@ -120,7 +122,7 @@
     "# make sensitivity maps, normalized so SSoS = 1\n",
     "if !@isdefined(smap)\n",
     "\tncoil = 2\n",
-    "\t(smap,_) = ir_mri_sensemap_sim(dims=N, ncoil=ncoil, orbit_start=90)\n",
+    "\tsmap = ir_mri_sensemap_sim(dims=N, ncoil=ncoil, orbit_start=[90])\n",
     "\tp1 = jim(smap, \"ncoil=$ncoil sensitivity maps raw\")\n",
     "\n",
     "\tssos = sqrt.(sum(abs.(smap).^2, dims=ndims(smap))) # SSoS\n",
@@ -159,7 +161,8 @@
     "\n",
     "\t# block diagonal system matrix, with one NUFFT per frame\n",
     "\tS = [Diagonal(selectdim(smap, ndims(smap), ic)[:]) for ic=1:ncoil]\n",
-    "\tAS1 = A1 -> vcat([A1 * LinearMapAA(s) for s in S]...) # [A1*S1; ... ; A1*Sncoil]\n",
+    "\tSO = s -> LinearMapAA(s ; idim=N, odim=N) # LinearMapAO\n",
+    "\tAS1 = A1 -> vcat([A1 * SO(s) for s in S]...) # [A1*S1; ... ; A1*Sncoil]\n",
     "\n",
     "\t# output is essentially [nt Ncoil nspf Nro] (which is possibly unusual)\n",
     "\t# input is [N... nt]\n",
@@ -178,7 +181,7 @@
    "source": [
     "# simulate k-space data via an inverse crime\n",
     "if !@isdefined(y)\n",
-    "\tytrue = A * xtrue[:]\n",
+    "\tytrue = A * xtrue\n",
     "\n",
     "\tsnr2sigma = (db, yb) -> # compute noise sigma from SNR (no sqrt(2) needed)\n",
     "\t\t10^(-db/20) * norm(yb) / sqrt(length(yb))\n",
@@ -195,10 +198,9 @@
     "if !@isdefined(x0)\n",
     "\t# todo: should use density compensation, perhaps via\n",
     "\t# https://github.com/JuliaGeometry/VoronoiDelaunay.jl\n",
-    "\tx0 = reshape(A' * y, N..., nt) # zero-filled recon\n",
-    "\n",
-    "\ttmp = A * x0[:]\n",
-    "\tx0 = (tmp'y / norm(tmp)^2) * x0 # scale sensibly\n",
+    "\tx0 = A' * y # zero-filled recon (for each frame)\n",
+    "\ttmp = A * x0 # Nkspace × Ncoil × Nframe\n",
+    "\tx0 = (dot(tmp,y) / norm(tmp)^2) * x0 # scale sensibly\n",
     "\tjim(x0, \"initial image\", yflip=ig.dy < 0)\n",
     "end\n",
     "#prompt()"
@@ -214,12 +216,8 @@
    "source": [
     "# temporal finite differences\n",
     "if !@isdefined(Dt)\n",
-    "\tN3i = (N..., nt) # (nx ny nt)\n",
-    "\tN3o = (N..., nt-1) # (nx ny nt-1)\n",
-    "\tDt = diff_map(N3i, dims=length(N)+1) # T=eltype(A)) # todo\n",
-    "\n",
-    "\ttmp = reshape(Dt * xtrue[:], N3o)\n",
-    "\ttmp = reshape(Dt' * tmp[:], N3i)\n",
+    "\tDt = diffl_map((N..., nt), length(N)+1 ; T=eltype(A))\n",
+    "\ttmp = Dt' * (Dt * xtrue)\n",
     "\tjim(tmp, \"time diff\", yflip=ig.dy < 0)\n",
     "end\n",
     "#prompt()"
@@ -243,9 +241,8 @@
     "\tfun = (x,iter) -> cost(x)\n",
     "\tgradf = [v -> v - y, u -> reg * dpot.(u)]\n",
     "\tcurvf = [v -> Float32(1), u -> reg]\n",
-    "\tB = [A,Dt]\n",
-    "\t(xh, out) = ncg(B, gradf, curvf, x0[:]; niter=niter, fun=fun)\n",
-    "\txh = reshape(xh, N3i)\n",
+    "\tB = [A, Dt]\n",
+    "\t(xh, out) = ncg(B, gradf, curvf, x0 ; niter=niter, fun=fun)\n",
     "\tcosts = [out[i+1][1] for i=0:niter]\n",
     "end\n",
     "\n",
